Fix layout issues in index and contact pages
- fixed `.metnav-arrow` animation for improved navigation.
- Removed the phone number from contact.html.

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -142,6 +142,23 @@ body {
 }
 
 nav {
+    position: relative;
+    
+    .metnav-arrow {
+        content: "";
+        background-color: transparent;
+        position: fixed;
+        z-index: 100;
+        top: 0px;
+        transform: translate(-10px, 0);
+        width: 0;
+        height: 0;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-top: 12px solid white;
+        transition: all 1s cubic-bezier(0.03, 0.98, 0.52, 0.99) 0s;
+        opacity: 0;
+    }
 
     .metering-nav {
         position: fixed;
@@ -194,21 +211,6 @@ nav {
                     background-color: #fc973b;
                     color: white;
                 }
-            }
-
-            .metnav-arrow {
-                content: '';
-                background-color: transparent;
-                position: absolute;
-                top: -20px;
-                transform: translate(-10px, 0);
-                width: 0;
-                height: 0;
-                border-left: 10px solid transparent;
-                border-right: 10px solid transparent;
-                border-top: 12px solid white;
-                transition: all 1s cubic-bezier(0.03, 0.98, 0.52, 0.99) 0s;
-                opacity: 0;
             }
 
             .metnav-title {
